<resources>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Use 6 or more characters with a mix of letters, numbers</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="label_login_phone">Phone number:</string>
    <string name="label_login_pass">Password:</string>
    <string name="label_login_button">Login</string>
    <string name="label_new_register">Create account </string>
    <string name="label_forget_pass">Forgot password</string>
    <string name="label_full_name">Full name: </string>
    <string name="label_year_of_birth">Year of birth:  </string>
    <string name="label_gender">Gender: </string>
    <string name="label_phone_number">Phone number: </string>
    <string name="label_email">Email: </string>
    <string name="label_nationality">Nationality: </string>
    <string name="label_address">Contact address: </string>
    <string name="terms_of_service"><u><font color='#145BD6'>Terms of service.</font></u></string>
    <string name="label_register">Register</string>
    <string name="label_update">Update</string>
    <string name="label_read_accept">I accept the terms of service</string>
    <string name="label_information_register">Personal information register</string>
    <string name="label_well_trained_companion">Well Trained Companion</string>
    <string name="label_update_info">Updated information</string>
    <string name="label_list_of_need_support_infomation">List of Travel Companion information</string>
    <string name="label_register_flight">Registration for Flight </string>
    <string name="label_register_guide">Registration for travel guide</string>
    <string name="label_register_for_hour">Registration for hourly service</string>
    <string name="label_register_flight_companion">Registration for Flight Companion</string>
    <string name="label_register_flight_companion_need">Request for Flight Companion</string>
    <string name="label_register_flight_companion_domestic">Registration for domestic flight Companion  </string>
    <string name="label_register_well_trained_companion">Registration for Well Trained Companion</string>
    <string name="label_support">Travel Companion</string>
    <string name="label_support_guide">Companion Guide</string>
    <string name="label_support_well">Well Trained Companion</string>
    <string name="label_need_support">Escortee</string>
    <string name="label_need_support_guide">Visitor</string>
    <string name="label_need_support_well">Well Trained Companion</string>
    <string name="label_input_info">Please enter full information.</string>
    <string name="label_email_invalid">This email address is invalid</string>
    <string name="label_phone_invalid">This phone number is invalid</string>
    <string name="label_departure_date">Departure date: </string>
    <string name="label_departure_hour">Time departure: </string>
    <string name="label_flight_number">Flight number: </string>
    <string name="label_airline">Airline: </string>
    <string name="label_airport_departure">Pick-up point: </string>
    <string name="label_arrival_airport">Visit places: </string>
    <string-array name="service_pkg_list">
        <item>Registration for airport transfer</item>
        <item>Homestay </item>
        <item>Appropriate food</item>
        <item>Places to visit</item>
        <item>Registration for optional service as: Medical Care, real estate investment…</item>
        <item>Self-drive car rental (Morto/ Car) </item>
    </string-array>
    <string-array name="service_pkg">
        <item>Accompanied passengers</item>
        <item>Professional companion service </item>
        <item>Well Trained Companion </item>
    </string-array>
    <string name="reminder_medicine">Reminder medicine\'s notice</string>
    <string-array name="service_pkg_more">
        <item>@string/reminder_medicine</item>
        <item>Airport Lounge </item>
        <item>Airport transfer</item>
    </string-array>
    <string-array name="list_header">
        <item>BECOME HELPER</item>
        <item>SERVICE REQUESTER</item>
    </string-array>
    <string-array name="list_item">
        <item>Registration for Flight Companion</item>
        <item>Registration for travel guide</item>
        
    </string-array>
    <string-array name="list_item_gtn">
        
        
        <item>Registration for service of Elders/ Disability/ Kids/ Pregnant</item>
    </string-array>
    <string-array name="list_gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="label_register_guide_type">Registration for trip:</string>
    <string name="label_in_country">Domestic</string>
    <string name="label_out_country">International</string>
    <string name="label_living_city">City residence</string>
    <string name="label_driving_licence">Car driving licence:</string>
    <string name="label_motor">Motor</string>
    <string name="label_4_to_9_seats">Car driving license from 4 seater to 9 seater</string>
    <string name="label_over_9_seats">Car driving license over 9 seater </string>
    <string name="label_countries_come">Countries you have come:</string>
    <string name="label_known_destinations">Well - known destinations:</string>
    <string name="label_fluent_language">Fluent language: </string>
    <string name="label_available_time">Available time:  </string>
    <string name="label_registration_place_to_guide">Registration place to guide </string>
    <string name="label_upload_passport">Upload photo of passport (International) </string>
    <string name="label_upload_id_card">Upload photo of ID card (Domestic Flight) </string>
    <string name="label_upload_flight_ticket">Upload photo of flight ticket</string>
    <string name="label_request_for_travel_guide">Request for travel guide </string>
    <string name="label_departure_place">Departure place: </string>
    <string name="label_destination">Destination: </string>
    <string name="label_destination_schedule">Schedule of destinations (Country/ city): </string>
    <string name="label_number_people">Number of relatives accompanying: </string>
    <string name="label_kids">Kids: </string>
    <string name="label_elder">Elders: </string>
    <string name="label_disability_number">Disability: </string>
    <string name="label_pregnant_number">Pregnant: </string>
    <string name="label_middle_number">Middle: </string>
    <string name="label_register_service_package">Request for service package: </string>
    <string name="label_register_object">Well Trained Object: </string>
    <string name="label_register_service_package_additional">Registration for additional services: </string>
    <string name="label_message">Message: </string>
    <string name="label_register_finish">Finish Registration </string>
    <string name="label_register_hourly_service">Registration for hourly service </string>
    <string name="label_full_name_of_service_requester">Full name of service requester: </string>
    <string name="label_date_registration">Date registration: </string>
    <string name="label_need_time">Time: </string>
    <string name="label_from">From: </string>
    <string name="label_to">To: </string>
    <string name="label_pick_up_place">Pick up place: </string>
    <string name="label_destination_place">Destination: </string>
    <string name="label_for">For: </string>
    <string-array name="hourly_service_pkg">
        <item>Introduce clinics / medical centers</item>
        <item>Book or buy tickets for destinations you want to visit</item>
    </string-array>
    <string-array name="register_for_list">
        <item>Elders</item>
        <item>Kids</item>
        <item>Disability</item>
    </string-array>
    <string name="label_tmp">Cám ơn Quý khách đã đăng ký dịch vụ của Travel Companion
    Nhân viên Unique Tour sẽ liên hệ quý khách trong thời gian sớm nhất
        \n
    Chúc Quý khách sức khỏe và thành công
    \n
    Mọi thông tin chi tiết vui lòng liên hệ:
        \n
    TC Dept. – Travel West Co.,LTD
        \n
    91 Nguyễn Văn Thủ, Phường Đa Kao, quận 1, TP.HCM
        \n
    Điện thoại:
        \n
    Email
    Website:www.uniquetour.biz </string>
    <string name="label_tmp_2">Quý khách vui lòng liên hệ với TC để được hướng dẫn đăng ký trở thành Người trợ giúp chuyên môn (Well Trained Companion) của TC
\n
Thông tin liên hệ:
        \n
TC Dept – Travel West Co.,LTD
        \n
91 Nguyễn Văn Thủ, Phường Đa Kao, quận 1, TP.HCM
        \n
ĐT: 0917838083 (Ms. Yến)
        \n
Email: tuyendung.travelwest@gmail.com</string>
    <string name="msg_finish_dialog">Cám ơn bạn đã thực hiện trợ giúp thành
    công! Phí dịch vụ sẽ được Travel Companion
    thanh toán thông qua tài khoản ngân hàng
    đã đăng ký trong vòng 03 ngày làm việc”
         \n \n
    Tài khoản ngân hàng: \n
    -tên Tài khoản \n
    - Số TK \n
    - Ngân hàng : \n
    - Chi nhánh</string>
    <string name="label_forgot_pass">Email</string>
    <string name="label_forgot_pass_button">Reset password</string>
    <string name="label_forgot_pass_title">Please enter the account that you want to reset the password</string>
    <string name="label_forgot_check_mail_label">We just send you an email with a code to reset your password</string>
    <string name="label_forgot_check_mail_title">Check your email!</string>
    <string name="label_gender_input_title">Please chose gender</string>
    <string name="crash_toast_text">Send crash log to mobile dev</string>
    <string name="label_accept_terms">Please accept the terms of service.</string>
    <string name="label_reset_email">Email</string>
    <string name="label_reset_code">Code from email</string>
    <string name="label_reset_new_pass">New password</string>
    <string name="label_reset_pass_title">Please enter your new pass and your info</string>
    <string name="label_date">Date:</string>
    <string name="label_status">Status:</string>
    <string name="label_passenger_info">Passenger info:</string>
    <string name="label_note">Note:</string>
    <string name="label_elderly">%d Elderly</string>
    <string name="label_middle_age">%d MiddleAge</string>
    <string name="label_children">%d Children</string>
    <string name="label_pregnant">%d Pregnant</string>
    <string name="label_disability">%d Disability</string>
    <string name="label_logout">Logout</string>
    <string name="label_work">Work</string>
    <string name="label_profile">Profile</string>
    <string name="label_free_time_in_week">Work time:</string>
    <string name="label_start_time">Start time:</string>
    <string name="label_support_place">Location assistance: </string>
    <string name="label_work_experience">Work experience</string>
    <string name="label_current_job">Current job: </string>
    <string name="label_professional_qualification_title">Professional qualification</string>
    <string name="label_professional_qualification">Professional qualification:</string>
    <string name="label_specialized">Medical Specialized:</string>
    <string name="label_other_specialized">Other Specialized:</string>
    <string name="label_foreign_language">Foreign language:</string>
    <string name="label_communication_skills">Communication skill: </string>
    <string name="label_working_place">Working place/ School :</string>
    <string name="label_position">Position:</string>
</resources>