<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:custom="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/ll_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                style="@style/Info_Title"
                android:background="@drawable/bg_green_border_gray_filled_rounded_corner"
                android:text="@string/label_register_hourly_service"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                android:id="@+id/et_full_name"
                style="@style/Info_Input"
                custom:isGreen="true"
                custom:text="@string/label_full_name_of_service_requester"/>

            <TextView
                android:id="@+id/tv_register_object"
                android:layout_marginTop="@dimen/_5sdp"
                style="@style/Tv_Package_service_drop_down"
                android:text="@string/label_register_object"/>

            <TextView
                android:id="@+id/tv_register_service"
                android:layout_marginTop="@dimen/_5sdp"
                style="@style/Tv_Package_service_drop_down"
                android:text="@string/label_register_service_package"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                android:id="@+id/et_departure_date"
                style="@style/Info_Input"
                custom:isGreen="true"
                custom:text="@string/label_date_registration"/>

            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                style="@style/Tv_Package_service"
                android:id="@+id/et_departure_time"
                android:text="@string/label_need_time"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                style="@style/Info_Input"
                android:id="@+id/et_from"
                android:layout_marginStart="@dimen/_30sdp"
                custom:isGreen="true"
                custom:inputType="3"
                custom:text="@string/label_from"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                style="@style/Info_Input"
                android:id="@+id/et_to"
                android:layout_marginStart="@dimen/_30sdp"
                custom:isGreen="true"
                custom:inputType="3"
                custom:text="@string/label_to"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                style="@style/Info_Input"
                custom:isGreen="true"
                android:id="@+id/et_pickup_place"
                custom:text="@string/label_pick_up_place"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                style="@style/Info_Input"
                android:id="@+id/et_visit_place"
                custom:isGreen="true"
                custom:text="@string/label_destination_place"/>

            <TextView
                style="@style/Tv_Package_service_drop_down"
                android:id="@+id/tv_register_service_more"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/label_register_service_package_additional"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                style="@style/Info_Input"
                android:id="@+id/et_msg"
                custom:isGreen="true"
                android:layout_marginTop="@dimen/_10sdp"
                custom:text="@string/label_message"/>

<!--            <Button-->
<!--                android:id="@+id/email_sign_in_button"-->
<!--                android:layout_width="@dimen/_100sdp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:layout_marginTop="@dimen/_20sdp"-->
<!--                android:background="@drawable/btn_login_shape"-->
<!--                android:text="@string/label_register"-->
<!--                android:textColor="@color/color_text_white"-->
<!--                android:textStyle="bold"/>-->

            <include layout="@layout/layout_back_next" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>