<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/ll_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                style="@style/Info_Title_Well_Companion"
                android:background="@drawable/bg_green_border_gray_filled_rounded_corner"
                android:text="@string/label_professional_qualification_title" />

            <TextView
                android:id="@+id/tv_professional_qualification"
                style="@style/Tv_Package_service_drop_down"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/label_professional_qualification" />

            <TextView
                android:id="@+id/tv_specialized"
                style="@style/Tv_Package_service_drop_down"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/label_specialized" />

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                android:id="@+id/et_other_specialized"
                style="@style/Info_Input"
                custom:isGreen="true"
                custom:text="@string/label_other_specialized" />

<!--            <TextView-->
<!--                android:id="@+id/tv_foreign_language"-->
<!--                style="@style/Tv_Package_service_drop_down"-->
<!--                android:layout_marginTop="@dimen/_5sdp"-->
<!--                android:text="@string/label_foreign_language" />-->

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                style="@style/Info_Input"
                android:id="@+id/et_foreign_language"
                custom:isGreen="true"
                custom:text="@string/label_foreign_language" />

            <TextView
                android:id="@+id/tv_communication_level"
                style="@style/Tv_Package_service_drop_down"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/label_communication_skills"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_11sdp" />

            <!-- Title -->
            <TextView
                android:layout_marginTop="@dimen/_20sdp"
                style="@style/Info_Title_Well_Companion"
                android:background="@drawable/bg_green_border_gray_filled_rounded_corner"
                android:text="@string/label_work_experience" />


            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                android:id="@+id/tv_current_job"
                style="@style/Info_Input"
                custom:isGreen="true"
                custom:text="@string/label_current_job"
                />

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                android:id="@+id/et_working_place"
                style="@style/Info_Input"
                custom:isGreen="true"
                custom:text="@string/label_working_place" />

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                android:id="@+id/et_working_position"
                style="@style/Info_Input"
                custom:isGreen="true"
                custom:text="@string/label_position" />

            <include layout="@layout/layout_base_medical_certificate" />

            <include layout="@layout/layout_back_next" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>