<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:custom="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/ll_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                style="@style/Info_Title"
                android:background="@drawable/bg_green_border_gray_filled_rounded_corner"
                android:text="@string/label_request_for_travel_guide"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                android:id="@+id/et_departure_date"
                style="@style/Info_Input"
                android:layout_marginTop="@dimen/_10sdp"
                custom:isGreen="true"
                custom:text="@string/label_departure_date"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                android:id="@+id/et_place"
                style="@style/Info_Input"
                custom:isGreen="true"
                custom:text="@string/label_departure_place"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                android:id="@+id/et_destination"
                style="@style/Info_Input"
                custom:isGreen="true"
                custom:text="@string/label_destination"/>

            <LinearLayout
                android:id="@+id/ll_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_green_border_white_filled_rounded_corner"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_input_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@string/label_destination_schedule"
                    android:textSize="@dimen/_11sdp"/>

                <EditText
                    android:id="@+id/et_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:background="@null"
                    android:inputType="text"
                    android:maxLines="2"
                    android:singleLine="true"
                    android:textSize="@dimen/_11sdp"/>
            </LinearLayout>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                android:id="@+id/et_flight_number"
                style="@style/Info_Input"
                custom:isGreen="true"
                custom:text="@string/label_flight_number"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                android:id="@+id/et_airline"
                style="@style/Info_Input"
                custom:isGreen="true"
                custom:text="@string/label_airline"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                android:id="@+id/et_airport_departure"
                style="@style/Info_Input"
                custom:isGreen="true"
                custom:text="@string/label_airport_departure"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                android:id="@+id/et_arrival_airport"
                style="@style/Info_Input"
                custom:isGreen="true"
                custom:text="@string/label_arrival_airport"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                style="@style/Info_Input"
                android:layout_marginTop="@dimen/_10sdp"
                custom:isGreen="true"
                custom:inputType="3"
                custom:text="@string/label_number_people"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                style="@style/Info_Input"
                android:layout_marginStart="@dimen/_30sdp"
                custom:isGreen="true"
                custom:inputType="3"
                custom:text="@string/label_kids"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                style="@style/Info_Input"
                android:layout_marginStart="@dimen/_30sdp"
                custom:isGreen="true"
                custom:inputType="3"
                custom:text="@string/label_elder"/>

            <TextView
                android:id="@+id/tv_register_service"
                style="@style/Tv_Package_service"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/label_register_service_package"/>

            <TextView
                android:id="@+id/tv_register_service_more"
                style="@style/Tv_Package_service"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/label_register_service_package_additional"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                android:id="@+id/et_msg"
                style="@style/Info_Input"
                android:layout_marginTop="@dimen/_10sdp"
                custom:isGreen="true"
                custom:text="@string/label_message"/>


            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="@dimen/_10sdp"-->
            <!--android:background="@drawable/bg_green_border_white_filled_rounded_corner"-->
            <!--android:orientation="vertical">-->

            <!--<android.support.v7.widget.AppCompatTextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="@dimen/_5sdp"-->
            <!--android:text="@string/label_register_service_package_additional"-->
            <!--android:textColor="@color/colorAccent"-->
            <!--android:textSize="@dimen/_13sdp"/>-->

            <!--<android.support.v7.widget.RecyclerView-->
            <!--android:id="@+id/rv_service_pkg"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1"-->
            <!--/>-->
            <!--</LinearLayout>-->

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/btn_login_shape"
                android:text="@string/label_register"
                android:textColor="@color/color_text_white"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>