<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:custom="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/ll_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                style="@style/Info_Title"
                android:text="@string/label_information_register"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:clickable="true"
                android:id="@+id/rlAdminAvatar"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/ic_person_avatar_circle"
                app:civ_border_color="#EEEEEE"
                app:civ_border_width="1dp"
                android:focusable="true"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                android:id="@+id/et_full_name"
                style="@style/Info_Input"
                custom:text="@string/label_full_name"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                android:id="@+id/et_year_of_birth"
                style="@style/Info_Input"
                custom:inputType="3"
                custom:text="@string/label_year_of_birth"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                android:id="@+id/et_gender"
                style="@style/Info_Input"
                custom:text="@string/label_gender"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                android:id="@+id/et_nationality"
                style="@style/Info_Input"
                custom:text="@string/label_nationality"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                android:id="@+id/et_phone"
                style="@style/Info_Input"
                custom:inputType="3"
                custom:text="@string/label_phone_number"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                android:id="@+id/et_address"
                style="@style/Info_Input"
                custom:text="@string/label_address"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                android:id="@+id/et_email"
                style="@style/Info_Input"
                custom:text="@string/label_email"/>

            <sang.thai.tran.travelcompanion.view.EditTextViewLayout
                android:id="@+id/et_pass"
                style="@style/Info_Input"
                custom:inputType="21"
                custom:text="@string/label_login_pass"/>

            <TextView
                android:id="@+id/tv_terms_of_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:autoLink="all"
                android:linksClickable="false"
                android:padding="@dimen/_5sdp"
                android:selectAllOnFocus="false"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_13sdp"/>

            <LinearLayout
                android:id="@+id/ll_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fitsSystemWindows="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_term"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/label_read_accept"/>
            </LinearLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/btn_login_shape"
                android:text="@string/label_register"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/color_text_white"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>